Use `ClassValue` caches for resultset mapping to avoid classloader leaks in "hot reload"/servlet container environments